--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+.searchDiv {
+  border: 2px solid rgb(255, 255, 255);
+  box-shadow: 0px 8px 40px 0px rgba(71, 71, 71, 0.59);
+  background-color: #c9c9c9;
+  border-bottom-color: #c9c9c9;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  margin-top: -8px;
+  color: #424242;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.searchDiv form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 30px;
+  margin-left: 15px;
+}
+.searchDiv input {         /* İÇ KUTU */ 
+position: absolute;
+border: transparent;
+background-color: rgb(238, 238, 238);
+border-radius: 20px;
+border-top-left-radius: 0px;
+border-bottom-left-radius: 0px;
+width: 80%;
+bottom: 9px;
+left: 35px;
+cursor: text;
+outline: none;
+}
+.searchIcon {              /* DIŞ KUTU */
+  position: relative;
+  border: 1px solid rgb(238, 238, 238);
+  border-radius: 20px;
+  background-color: rgb(238, 238, 238);
+  height: 30px;
+  padding-left: 10px;
+  padding-top: 5px;
+  margin-top: -5px;
+  width: 65%;
+  cursor: text;
+}
+.searchIcon:hover {
+  border-color: rgb(117, 117, 117);
+}
+.searchLogo {
+  color: rgb(117, 117, 117);
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.imageList {
+  padding-top: 30px;
+  padding-bottom: 70px;
+  margin: 30px;
+  columns: 250px 3;
+  column-gap: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.imageListImg {
+  width: 100%;
+  margin-bottom: 10px;
 }
