--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,23 @@
   border-left: none;
   border-right: none;
   margin-top: -8px;
-  color: #424242;
 }
+
+.searchDiv a {
+  text-decoration: none;
+  background: #000000;
+  background: linear-gradient(to top right, #000000 0%, #808285 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  }
+
 .searchDiv form {
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
   margin-left: 15px;
 }
-.searchDiv input {         /* İÇ KUTU */ 
+.searchDiv input {    
 position: absolute;
 border: transparent;
 background-color: rgb(238, 238, 238);
@@ -28,7 +36,7 @@ left: 35px;
 cursor: text;
 outline: none;
 }
-.searchIcon {              /* DIŞ KUTU */
+.searchIcon {      
   position: relative;
   border: 1px solid rgb(238, 238, 238);
   border-radius: 20px;
